--- a/index.html
+++ b/index.html
@@ -3,11 +3,116 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
-    <title>Document</title>
+    <title>Personal Support Chatbot</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f0f0f0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
+        }
+
+        .container {
+            background-color: #333;
+            border-radius: 10px;
+            box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
+            overflow: hidden;
+            width: 400px;
+            max-width: 90%;
+        }
+
+        .header {
+            background-color: #4CAF50;
+            color: white;
+            padding: 20px;
+            text-align: center;
+            position: relative;
+        }
+
+        .logo {
+            position: absolute;
+            left: 20px;
+            top: 50%;
+            transform: translateY(-50%);
+        }
+
+        .logo svg {
+            display: block;
+        }
+
+        .title {
+            margin: 0;
+            font-size: 24px;
+            font-weight: bold;
+        }
+
+        .tagline {
+            margin: 5px 0 0;
+            font-size: 14px;
+            color: #ddd;
+        }
+
+        .chat-container {
+            padding: 20px;
+            color: white;
+        }
+
+        .message {
+            background-color: #555;
+            border-radius: 5px;
+            padding: 10px;
+            margin-bottom: 10px;
+        }
+
+        .input-area {
+            padding: 10px;
+            background-color: #222;
+            display: flex;
+        }
+
+        .input-area input {
+            flex-grow: 1;
+            padding: 10px;
+            border: none;
+            border-radius: 5px;
+            background-color: #444;
+            color: white;
+            margin-right: 10px;
+        }
+
+        .input-area button {
+            background-color: #4CAF50;
+            color: white;
+            border: none;
+            padding: 10px 15px;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+    </style>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="header">
+            <div class="logo">
+                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+    <path d="M6.5 21C5.67 21 5 20.33 5 19.5C5 18.67 5.67 18 6.5 18H7V14C7 13.45 7.45 13 8 13H10V9.89C8.72 9.43 7.77 8.23 7.19 7H5C4.45 7 4 6.55 4 6V3C4 2.45 4.45 2 5 2H7.5C8.33 2 9 2.67 9 3.5V5.21C9.78 5.47 10.45 6.13 10.77 7H14.24C14.56 6.13 15.22 5.47 16 5.21V3.5C16 2.67 16.67 2 17.5 2H20C20.55 2 21 2.45 21 3V6C21 6.55 20.55 7 20 7H17.81C17.23 8.23 16.28 9.43 15 9.89V13H17C17.55 13 18 13.45 18 14V18H18.5C19.33 18 20 18.67 20 19.5C20 20.33 19.33 21 18.5 21H6.5Z" fill="white"/>
+</svg>
+            </div>
+            <h1 class="title">Support Bot</h1>
+            <p class="tagline">I'm here to listen and support you.</p>
+        </div>
+        <div class="chat-container">
+            <div class="message">Hello! How can I help you today?</div>
+        </div>
+        <div class="input-area">
+            <input type="text" placeholder="Type your message...">
+            <button>Send</button>
+        </div>
+    </div>
 </body>
-<script src="scripts.js"></script>
 </html>
+
